Added better instructions and demo showcase, updated readme

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Dropdown UI demo",
   "main": "src/index.html",
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "author": "Martin Jakobsen <martinjakobsen93@gmail.com>",
   "license": "ISC",
